--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,19 @@
 
 
 /* quick-menu */
-.quick-menu{position: fixed; bottom: 165px; right: 15%; z-index: 99;}
+.quick-menu{position: fixed; bottom: 165px; right: 10%; z-index: 999999999999;}
+    
+/* .quick-menu:hover{transform: scale(1.5); transition: .3s;} */
 .quick-menu a{display: block; width: 107px; height: 100%; font-size: 20px; font-family: 'NanumSquareNeoExtraBold'; color: #333; text-align: center;}
 .quick-menu a img{width: 100%;}
+
+
+
+
+.quick-menu a{opacity: .8;transform: scale(.4);transition: .3s;transform-origin: right;}
+.quick-menu:hover a{opacity: 1;transform: scale(1);transition: .3s;}
+    
+
 
 
 /* header */
@@ -14,7 +24,7 @@
 .header-mob-menu h1{padding: 15px 0;display: inline-block;}
 .header-mob-menu h1 a img{width: 100%;}
 
-.header-mob-menu .header-appBar{display: block;position: absolute;width: 26px;height: 16px;top: 45px;left: 20px;}
+.header-mob-menu .header-appBar{display: block;position: absolute;width: 26px;height: 16px;top: 30px;left: 20px;}
 .header-mob-menu .header-appBar .appbarBt{width: 100%;height: 100%;position: relative;display: block;}
 .header-mob-menu .header-appBar .appbarBt .bar{display: inline-block;position: absolute;width: 100%;height: 2px;background: #000;top:0;left: 0; transition: .3s;}
 .header-mob-menu .header-appBar .appbarBt .bar1{top: 0;}
@@ -24,14 +34,13 @@
 .header-mob-menu .header-appBar .appbarBt .bar2.active{opacity: 0;}
 .header-mob-menu .header-appBar .appbarBt .bar3.active{top: 50%; margin-top: -1px; transform: rotate(-45deg);}
 
-.header-mob-menu .header-shop-btn{display: block;position: absolute;width: 22px;right: 20px;top: 30px;}
-.header-mob-menu .header-shop-btn a{display: block;position: absolute;width: 40px;height: 40px;right: 10px;top:10px;background: url(/images/ico_gnb_mobile_new_store.jpg);background-repeat: no-repeat;}
+.header-mob-menu .header-shop-btn a{display: block;position: absolute;width: 40px; height: 41px;right: 10px;top:20px;background: url(../images/ico_gnb_mobile_new_store.jpg);background-repeat: no-repeat;}
 
 aside{text-align: right; padding-top: 15px;padding-bottom: 7px;}
 aside span{display: inline-block; margin-left: 10px;}
 aside span a{color: darkgreen; font-weight: bold;}
 
-.header-nav{width: 100%;display: flex;justify-content:space-between;align-items: center;}
+.header-nav{width: 100%;display: flex; justify-content:space-between; align-items: center;}
 .header-nav nav ul{display: flex;}
 .header-nav nav ul li{margin-left: 35px;}
 .header-nav nav ul li:hover a{border-bottom: 1px solid darkgreen;}
@@ -39,10 +48,11 @@ aside span a{color: darkgreen; font-weight: bold;}
 
 .mob-bg{content: '';display: none; left: 0;top: 0;width: 100vw;height: 100vh;background: #000;position: fixed; opacity: .6; z-index: 999;}
 .mob-bg.on{display: block;} 
-.mob-gnb .mob-content{display: none; width: 60%; height: 100%; background:mintcream;padding: 30px; box-sizing: border-box;  position: fixed;  top: 0; left: 0;  z-index:999;  overflow: auto;}
+.mob-gnb .mob-content{display: none; width: 50%; height: 100%; background:mintcream;padding: 30px; box-sizing: border-box;  position: fixed;  top: 0; left: 0;  z-index:999;  overflow: auto;}
 .mob-gnb .mob-content.active{display: block;}
 .mob-gnb .mob-content .mob-gnb-search{margin-bottom: 30px; position: relative;}
 .mob-gnb .mob-content .mob-gnb-search input{line-height: 50px;border: 0;border-bottom: 1px #9a9a9a solid;font-size: 20px;height: 50px;width: 100%;border-radius: 3px;padding-left: 10px;box-sizing: border-box;}
+.mob-gnb .mob-content .mob-gnb-search input:focus{outline: none;}
 .mob-gnb .mob-content .mob-gnb-search button{width: 40px;  height: 40px; background: darkgreen; color: #fff; border-radius: 50%; cursor: pointer; position: absolute; top: 5px; right: 5px;}
 .mob-gnb .mob-content .mob-gnb-search button i{color: #fff;font-size: 14px;}
 .mob-gnb .mob-content .mob-nav ul{width: 100%;}
@@ -123,15 +133,16 @@ aside span a{color: darkgreen; font-weight: bold;}
 #section4 .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .main_store h3, .main_franchise h3{font-size: 30px; color: darkgreen; font-family: 'NanumSquareNeoExtraBold'; margin-bottom: 50px; text-align: center;}
 .main_store{display: flex;}
-.main_store>div{padding: 68px 78px; box-sizing: border-box;}
+.main_store>div{padding: 65px 75px; box-sizing: border-box;}
 .main_store_search{width: 50%; height: 390px; background: palegreen; background: url(../images/bg_main_sns_top.jpg) no-repeat bottom;}
-.main_store_search p{font-size: 20px;}
+.main_store_search p{font-size: 21px;}
 .main_store_search form{position: relative;}
 .main_store_search form input{border: 3px solid darkgreen;color: darkgreen;width: 100%;line-height: 50px;height: 50px;padding-left: 10px;box-sizing: border-box; margin-top: 25px; padding-right: 45px;}
+.main_store_search form input:focus{outline: none;}
 .main_store_search form button{background: none;}
-.main_store_search form button i{display: inline-block; width: 40px; height: 40px; line-height: 40px; color: #222; background: oldlace; border-radius: 50%; position: absolute; top: 30px; right: 5px;}
-.main_franchise{width: 50%; height: 390px; background: url(../images/bg_main_snack_size.png);}
-.main_franchise a p{font-size: 20px;}
+.main_store_search form button i{display: inline-block; width: 40px; height: 40px; line-height: 40px; color: #222; position: absolute; top: 30px; right: 5px;}
+.main_franchise{width: 50%; height: 390px; background: url(../images/bg_main_snack_size.png) ;}
+.main_franchise a p{font-size: 21px;}
 .main_franchise a strong{display: block; text-align: center; font-size: 20px; margin-top: 25px;}
 .main_franchise a strong i{display: inline-block; width: 40px; height: 40px; line-height: 40px; color: #fff; background: #7b6251; border-radius: 50%;}
 
@@ -151,6 +162,7 @@ aside span a{color: darkgreen; font-weight: bold;}
 #footer .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .footer-link{margin-bottom: 10px; margin-top: 10px;}
 .footer-link li{display: inline-block; margin-right: 20px;}
+.footer-link li:nth-child(4) a{font-weight: bold;}
 .footer-link li a{font-size: 14px;}
 .footer-info{margin-bottom: 10px;}
 .footer-info li{display: inline-block; color: #999; font-size: 12px;}
@@ -172,17 +184,20 @@ footer p{color: #999;}
 
 @media screen and (max-width:830px) {
     .main_menu_prd .main_menu_new div img{width: 150px; height: 150px;}
-    .main_menu_prd .main_menu_new div strong{font-size: 15px;}
+    .main_menu_prd .main_menu_new div strong{font-size: 14px;}
     .slide_memu li .img_box{margin-top: 9px;}
     .slide_memu li .text_box{margin-top: 8px;}
-    .slide_memu li .text_box>strong{font-size: 15px;}
+    .slide_memu li .text_box>strong{font-size: 14px;}
 }
 
 
 @media screen and (max-width:768px) {
-    #header{height: 90px;}
-    .header-mob-menu{height: 90px;}
-    .main_banner {padding-top: 90px;}
+    .quick-menu{display: none;}
+
+    #header{height: 77px;}
+    .header-mob-menu{height: 77px;}
+    .header-mob-menu h1{padding: 5px 0;}
+    .main_banner {padding-top: 77px;}
     .p_img{display: none !important;}
     .m_img{display: inline !important;}
     .main_menu_new h2,.main_menu_hot h2{font-size: 28px; }
@@ -190,10 +205,12 @@ footer p{color: #999;}
 
     #section2 .inner{padding: 0 20px;}
     #section3 .inner{padding: 0 20px;}
+    #section4 .inner{padding: 0 20px;}
     #section5 .inner{padding: 0 20px;}
     .event_wrap h3, .news_wrap h3,.main_sns h3{margin-bottom: 5px;}
     .main_notice .event_wrap{width: 100%; margin: 20px 0;}
     .main_notice .news_wrap{width: 100%; margin-top: 20px;}
+    .main_notice .news_wrap ul{padding-bottom: 5px;}
     .main_notice .news_wrap ul li a img{width: 30%; margin-right: 20px;}
     .main_notice .news_wrap ul li a strong{width: 70%;}
     .main_notice .news_wrap ul li a i{font-size: 14px;}
@@ -220,14 +237,27 @@ footer p{color: #999;}
 }
 
 @media screen and (max-width:480px){
-    .quick-menu{display: none;}
-
-    .main_menu_new h2,.main_menu_hot h2{font-size: 25px; }
+    .main_menu_new h2,.main_menu_hot h2{font-size: 22px; }
     .main_menu_prd .main_menu_new div{margin-top: 15px;}
     .main_menu_prd .main_menu_new div img{width: 120px; height: 120px;}
 
     .slide_memu li .img_box{margin-top: 0;}
     .slide_memu li .img_box a{width: 70%;}
+    .main_notice .news_wrap ul li a span{font-size: 14px;}
+
+}
+
+@media screen and (max-width:360px){
+    #section2 .inner{padding: 0;}
+    #section3 .inner{padding: 0;}
+    #section4 .inner{padding: 0;}
+    #section5 .inner{padding: 0;}
+
+    .main_menu_prd .main_menu_new div{margin-top: 15px;}
+    .main_menu_prd .main_menu_new div img{width: 100px; height: 100px;}
+
+    .slide_memu li .img_box{margin-top: 0;}
+    .slide_memu li .img_box a{width: 73%;}
     .main_notice .news_wrap ul li a span{font-size: 14px;}
 
 }
