--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,23 @@
 *{font-family: 'NanumSquareNeo', 'NanumSquareNeoExtraBold';}
 
 
+.mob-content::-webkit-scrollbar-thumb { background-color: oldlace; }
+.mob-content::-webkit-scrollbar-track { background-color: darkgreen;  border-radius: 10px;}
+
+
 /* quick-menu */
-.quick-menu{position: fixed; bottom: 165px; right: 10%; z-index: 999999999999;}
+#header .quick-menu{position: fixed; top: 64%; right: 13%; z-index: 99; display: none; }
+#header .quick-menu a{display: block; width: 107px; height: 100%; font-size: 20px; font-family: 'NanumSquareNeoExtraBold'; color: #333; text-align: center;}
+#header .quick-menu a img{width: 100%;}
+#header .quick-menu a{opacity: .7;transform: scale(.4);transition: .3s;transform-origin: right;}
+#header .quick-menu:hover a{opacity: 1;transform: scale(1);transition: .3s;}
     
-/* .quick-menu:hover{transform: scale(1.5); transition: .3s;} */
-.quick-menu a{display: block; width: 107px; height: 100%; font-size: 20px; font-family: 'NanumSquareNeoExtraBold'; color: #333; text-align: center;}
-.quick-menu a img{width: 100%;}
-
-
-
-
-.quick-menu a{opacity: .8;transform: scale(.4);transition: .3s;transform-origin: right;}
-.quick-menu:hover a{opacity: 1;transform: scale(1);transition: .3s;}
-    
-
-
 
 /* header */
 #header{width: 100%;height: 112px; background:#fff; position: fixed; z-index: 9999;}
 #header .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
-.header-mob-menu{display: none;position: relative;top:0;left:0;width: 100%;height: 112px;background: #fff;text-align: center;}
-.header-mob-menu h1{padding: 15px 0;display: inline-block;}
+.header-mob-menu{display: none;position: relative;top:0;left:0;width: 100%;height: 77px;background: #fff;text-align: center;}
+.header-mob-menu h1{padding: 5px 0;display: inline-block;}
 .header-mob-menu h1 a img{width: 100%;}
 
 .header-mob-menu .header-appBar{display: block;position: absolute;width: 26px;height: 16px;top: 30px;left: 20px;}
@@ -30,11 +26,11 @@
 .header-mob-menu .header-appBar .appbarBt .bar1{top: 0;}
 .header-mob-menu .header-appBar .appbarBt .bar2{top: 50%;}
 .header-mob-menu .header-appBar .appbarBt .bar3{top: 100%;}
-.header-mob-menu .header-appBar .appbarBt .bar1.active{top: 50%; margin-top: -1px; transform: rotate(45deg);}
+/* .header-mob-menu .header-appBar .appbarBt .bar1.active{top: 50%; margin-top: -1px; transform: rotate(45deg);}
 .header-mob-menu .header-appBar .appbarBt .bar2.active{opacity: 0;}
-.header-mob-menu .header-appBar .appbarBt .bar3.active{top: 50%; margin-top: -1px; transform: rotate(-45deg);}
+.header-mob-menu .header-appBar .appbarBt .bar3.active{top: 50%; margin-top: -1px; transform: rotate(-45deg);} */
 
-.header-mob-menu .header-shop-btn a{display: block;position: absolute;width: 40px; height: 41px;right: 10px;top:20px;background: url(../images/ico_gnb_mobile_new_store.jpg);background-repeat: no-repeat;}
+.header-mob-menu .header-shop-btn a{display: block;position: absolute; width: 40px; height: 37px;right: 20px;top:20px;background: url(../images/ico_gnb_mobile_new_store.jpg);background-repeat: no-repeat;}
 
 aside{text-align: right; padding-top: 15px;padding-bottom: 7px;}
 aside span{display: inline-block; margin-left: 10px;}
@@ -48,7 +44,7 @@ aside span a{color: darkgreen; font-weight: bold;}
 
 .mob-bg{content: '';display: none; left: 0;top: 0;width: 100vw;height: 100vh;background: #000;position: fixed; opacity: .6; z-index: 999;}
 .mob-bg.on{display: block;} 
-.mob-gnb .mob-content{display: none; width: 50%; height: 100%; background:mintcream;padding: 30px; box-sizing: border-box;  position: fixed;  top: 0; left: 0;  z-index:999;  overflow: auto;}
+.mob-gnb .mob-content{display: none; width: 66%; height: 100%; background:mintcream;padding: 30px; box-sizing: border-box;  position: fixed;  top: 0; left: 0;  z-index:999;  overflow: auto;}
 .mob-gnb .mob-content.active{display: block;}
 .mob-gnb .mob-content .mob-gnb-search{margin-bottom: 30px; position: relative;}
 .mob-gnb .mob-content .mob-gnb-search input{line-height: 50px;border: 0;border-bottom: 1px #9a9a9a solid;font-size: 20px;height: 50px;width: 100%;border-radius: 3px;padding-left: 10px;box-sizing: border-box;}
@@ -56,15 +52,15 @@ aside span a{color: darkgreen; font-weight: bold;}
 .mob-gnb .mob-content .mob-gnb-search button{width: 40px;  height: 40px; background: darkgreen; color: #fff; border-radius: 50%; cursor: pointer; position: absolute; top: 5px; right: 5px;}
 .mob-gnb .mob-content .mob-gnb-search button i{color: #fff;font-size: 14px;}
 .mob-gnb .mob-content .mob-nav ul{width: 100%;}
-.mob-gnb .mob-content .mob-nav ul li a{display: block; color: #402c10; font-size: 22px;height: 55px; line-height: 55px; font-weight: bold;}
+.mob-gnb .mob-content .mob-nav ul li a{display: block; color: #402c10; font-size: 20px;height: 55px; line-height: 55px; font-weight: bold;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2{display: none;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2.on{display: block;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2 li{background: #faf9f5; height: 55px; line-height: 55px;}
-.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li a{font-size: 18px; display: block; height: 55px; color: #7b6251; padding-left: 25px;}
-.mob-gnb .mob-content .mob-nav .util{width: 100%; display: block; margin: 30px 0;}
+.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li a{font-size: 16px; display: block; height: 55px; color: #7b6251; padding-left: 15px;}
+.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li:hover a{color: darkgreen;}
+.mob-gnb .mob-content .mob-nav .util{width: 100%; display: block; margin: 20px 0;}
 .mob-gnb .mob-content .mob-nav .util ul li{display: inline-block; padding: 0 5px;}
-.mob-gnb .mob-content .mob-nav .util ul li a{font-size: 15px; color: #7b6251; font-weight: bold; }
-.mob-gnb-search input::placeholder{font-size: 12px }
+.mob-gnb .mob-content .mob-nav .util ul li a{font-size: 14px; color: #7b6251; font-weight: bold; }
 
 
 /* main */
@@ -143,18 +139,24 @@ aside span a{color: darkgreen; font-weight: bold;}
 .main_store_search form button i{display: inline-block; width: 40px; height: 40px; line-height: 40px; color: #222; position: absolute; top: 30px; right: 5px;}
 .main_franchise{width: 50%; height: 390px; background: url(../images/bg_main_snack_size.png) ;}
 .main_franchise a p{font-size: 21px;}
-.main_franchise a strong{display: block; text-align: center; font-size: 20px; margin-top: 25px;}
+.main_franchise a strong{display: block; text-align: center; font-size: 20px; margin-top: 20px;}
 .main_franchise a strong i{display: inline-block; width: 40px; height: 40px; line-height: 40px; color: #fff; background: #7b6251; border-radius: 50%;}
 
 
 /* #section5 */
 #section5{width: 100%; margin-top: 70px;}
-#section5 .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
+#section5 .inner{width: 100%; max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .main_sns{width: 100%; padding: 0 10px;}
-.main_sns h3{font-size: 23px; color: darkgreen; font-family: 'NanumSquareNeoExtraBold'; margin-bottom: 20px;}
+.main_sns h3{font-size: 23px; color: darkgreen; font-family: 'NanumSquareNeoExtraBold'; margin-bottom: 20px;
+text-align: center;}
 .main_sns ul{display: grid;grid-template-columns: repeat(6,1fr);column-gap: 5px;}
 .main_sns ul li{width: 100%;padding-top: 100%; position: relative;}
 .main_sns ul li a img{width: 100%;height: 100%;object-fit: cover;position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);border-radius: 2px;}
+
+.main_sns .sns-sort{margin-top: 30px; margin-bottom: 20px; text-align: center;}
+.main_sns .sns-sort span{display: inline-block;}
+.main_sns .sns-sort span a{width: 30px;height: 30px;border-radius: 50%;border: 1px solid #796150 ;display: inline-block;vertical-align: middle;text-align: center;}
+.main_sns .sns-sort span a i{font-size: 16px;line-height: 30px;margin-left: -1px;height: 100%;color: #796150;}
 
 
 /* footer */
@@ -172,13 +174,17 @@ footer p{color: #999;}
 
 
 @media screen and (max-width:1100px) {
+    #header{height: 77px;}
     #header .inner{padding: 0;}
     .header-nav{display: none;}
     .header-mob-menu{ display: block;}
     aside{display: none;}
+
+    .main_banner{padding-top: 77px;}
     
     .slide_memu li .img_box a{width: 90%;}
     .main_notice .news_wrap ul li{margin-bottom: 0;}
+
 }
 
 
@@ -193,9 +199,11 @@ footer p{color: #999;}
 
 @media screen and (max-width:768px) {
     .quick-menu{display: none;}
+    #section2 .inner{padding: 0 20px;}
+    #section3 .inner{padding: 0 20px;}
+    #section4 .inner{padding: 0 20px;}
+    #section5 .inner{padding: 0 20px;}
 
-    #header{height: 77px;}
-    .header-mob-menu{height: 77px;}
     .header-mob-menu h1{padding: 5px 0;}
     .main_banner {padding-top: 77px;}
     .p_img{display: none !important;}
@@ -203,16 +211,12 @@ footer p{color: #999;}
     .main_menu_new h2,.main_menu_hot h2{font-size: 28px; }
     .slide_memu li .img_box{margin-top: -5px;}
 
-    #section2 .inner{padding: 0 20px;}
-    #section3 .inner{padding: 0 20px;}
-    #section4 .inner{padding: 0 20px;}
-    #section5 .inner{padding: 0 20px;}
     .event_wrap h3, .news_wrap h3,.main_sns h3{margin-bottom: 5px;}
     .main_notice .event_wrap{width: 100%; margin: 20px 0;}
     .main_notice .news_wrap{width: 100%; margin-top: 20px;}
     .main_notice .news_wrap ul{padding-bottom: 5px;}
-    .main_notice .news_wrap ul li a img{width: 30%; margin-right: 20px;}
-    .main_notice .news_wrap ul li a strong{width: 70%;}
+    .main_notice .news_wrap ul li a img{width: 30%;}
+    .main_notice .news_wrap ul li a strong{width: 68%;}
     .main_notice .news_wrap ul li a i{font-size: 14px;}
     .main_notice .news_wrap ul li a span{font-size: 15px;}
     .main_notice .news_wrap ul li a em{font-size: 14px;}
@@ -221,9 +225,11 @@ footer p{color: #999;}
     .owl-nav button{display: none;}
 
     .main_store{flex-direction: column;}
-    .main_franchise{width: 100%;}
+    .main_franchise{width: 100%; background: url(../images/bg_main_snack.png);}
+    
     .main_store_search{width: 100%;}
 
+    .main_sns{padding: 0;}
     .main_sns ul{grid-template-columns: repeat(3,1fr); row-gap: 5px; }   
 }
 
@@ -245,6 +251,9 @@ footer p{color: #999;}
     .slide_memu li .img_box a{width: 70%;}
     .main_notice .news_wrap ul li a span{font-size: 14px;}
 
+    .main_store_search p{font-size: 16px;}
+    .main_franchise a p{font-size: 16px;}
+    .main_franchise a strong{font-size: 18px;}
 }
 
 @media screen and (max-width:360px){
@@ -258,6 +267,4 @@ footer p{color: #999;}
 
     .slide_memu li .img_box{margin-top: 0;}
     .slide_memu li .img_box a{width: 73%;}
-    .main_notice .news_wrap ul li a span{font-size: 14px;}
-
 }
