--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@ body{font-family: 'NanumSquareNeo', 'NanumSquareNeoExtraBold';}
 
 /*scrollbar*/
 ::-webkit-scrollbar{width: 10px;}
-::-webkit-scrollbar-track:vertical {background: oldlace;}
-::-webkit-scrollbar-thumb{background:rgb(242, 218, 169); border-radius: 10px;}
+::-webkit-scrollbar-track:vertical {background: rgb(247, 243, 214);}
+::-webkit-scrollbar-thumb{background:rgb(180, 217, 137); border-radius: 10px;}
 
 
 /* quick-menu */
@@ -111,13 +111,14 @@ aside span a{color: darkgreen; font-weight: bold;}
 .main_menu_prd .main_menu_new div img{width: 200px; height: 200px;}
 .main_menu_prd .main_menu_new div strong{font-size: 18px; display: block; color: #555;}
 
-.main_menu_prd .main_menu_hot {width: 70%; margin-bottom: 20px; padding: 10px; box-sizing: border-box;}
+.main_menu_prd .main_menu_hot {width: 70%; margin-bottom: 20px; padding: 10px 0; box-sizing: border-box;}
 .slide_memu li .img_box{text-align: center; margin-top: 15px;}
 .slide_memu li .img_box a{border-radius: 50%;background-color: mintcream; display: inline-block;width: 100%;height: 100%;text-align: center;overflow: hidden; }
-.slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing: border-box;} 
+.slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing:border-box;} 
 .slide_memu li .text_box{width: 100%; text-align: center; margin-top: 20px;}
-.slide_memu li .text_box>strong{font-size: 17px; color: #555; }
-.img_box:hover a{transform: scale(1.3); position: relative; z-index: 1; }
+.slide_memu li .text_box strong{font-size: 17px; color: #555; opacity: 1;}
+.slide_memu li:hover .img_box a{transform: scale(1.6); position: relative; z-index: 1;}
+.slide_memu li:hover .text_box strong{opacity: 0;}
 
 .owl-carousel{position: relative;} 
 .owl-nav button{ width:55px; height: 55px; position: absolute;  top: -75px;}
