--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body{font-family: 'NanumSquareNeo', 'NanumSquareNeoExtraBold';}
 
-
 #header{width: 100%;height: 112px; background:#fff; position: fixed; z-index: 9999;}
 #main{width: 100%;}
 #footer{width: 100%; clear: both;margin-top: 70px; border-top: 1px solid #e5e5e5; padding: 20px 0 30px;}
@@ -9,7 +8,6 @@ body{font-family: 'NanumSquareNeo', 'NanumSquareNeoExtraBold';}
 ::-webkit-scrollbar{width: 10px;}
 ::-webkit-scrollbar-track:vertical {background: rgb(247, 243, 214);}
 ::-webkit-scrollbar-thumb{background:rgb(180, 217, 137); border-radius: 10px;}
-
 
 /* header */
 #header .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
@@ -23,11 +21,6 @@ body{font-family: 'NanumSquareNeo', 'NanumSquareNeoExtraBold';}
 .header-mob-menu .header-appBar .appbarBt .bar1{top: 0;}
 .header-mob-menu .header-appBar .appbarBt .bar2{top: 50%;}
 .header-mob-menu .header-appBar .appbarBt .bar3{top: 100%;}
-/* .header-mob-menu .header-appBar .appbarBt .bar1.active{top: 50%; margin-top: -1px; transform: rotate(45deg);}
-/* .header-mob-menu .header-appBar .appbarBt .bar1.active{top: 50%; margin-top: -1px; transform: rotate(45deg);}
-.header-mob-menu .header-appBar .appbarBt .bar2.active{opacity: 0;}
-.header-mob-menu .header-appBar .appbarBt .bar3.active{top: 50%; margin-top: -1px; transform: rotate(-45deg);} */
-.header-mob-menu .header-appBar .appbarBt .bar3.active{top: 50%; margin-top: -1px; transform: rotate(-45deg);} */
 .header-mob-menu .header-shop-btn a{display: block;position: absolute; width: 40px; height: 37px;right: 20px;top:20px;background: url(../images/ico_gnb_mobile_new_store.jpg);background-repeat: no-repeat;}
 
 aside{text-align: right; padding-top: 15px;padding-bottom: 7px;}
@@ -92,7 +85,7 @@ aside span a{color: darkgreen; font-weight: bold;}
 .main_menu_prd .main_menu_new div img{width: 200px; height: 200px;}
 .main_menu_prd .main_menu_new div strong{font-size: 18px; display: block; color: #555;}
 
-.main_menu_prd .main_menu_hot {width: 70%; margin-bottom: 20px; padding: 10px 0; box-sizing: border-box;}
+.main_menu_prd .main_menu_hot {width: 70%; margin-bottom: 20px; padding: 10px; box-sizing: border-box;}
 .slide_memu li .img_box{text-align: center; margin-top: 15px;}
 .slide_memu li .img_box a{border-radius: 50%;background-color: mintcream; display: inline-block;width: 100%;height: 100%;text-align: center;overflow: hidden;}
 .slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing:border-box;} 
